# fenics-constitutive

./: .buildinfo  .gitignore  .readthedocs.yaml  .travis.yml  CITATION.cff  CMakeCache.txt  CMakeLists.txt  Cargo.toml  LICENSE  README.html  README.md  README.rst  RELEASE.md  conf.py  dodo.py  environment.yaml  environment.yml  environment_docs.yml  genindex.html  index.html  index.rst  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  test.py  to_rst.py
.conda/: meta.yaml
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/examples/: basics.doctree  example.doctree  gradient_damage.doctree  gradient_damage_iterative.doctree  gradient_damagex.doctree  helper.doctree  plate_with_hole.doctree  ramberg_osgood.doctree
.doctrees/src/: README.doctree
.github/workflows/: conda-package.yaml  pytest.yml  python-app.yml  python-package.yml
.ipynb_checkpoints/: Test_Run-checkpoint.ipynb
_sources/: README.rst.txt
_sources/examples/: basics.rst.txt  example.rst.txt  gradient_damage.rst.txt  gradient_damage_iterative.rst.txt  gradient_damagex.rst.txt  helper.rst.txt  plate_with_hole.rst.txt  ramberg_osgood.rst.txt
_static/: documentation_options.js
bindings/: Cargo.toml
bindings/src/: lib.rs
cofe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
comfe-rs/: Cargo.toml
comfe-rs/src/: bindings.rs  consts.rs  interfaces.rs  lib.rs  linear_elasticity.rs  mandel.rs  mises_plasticity.rs
comfe-rs/src/plasticity/: drucker_prager_classic.rs  drucker_prager_hyperbolic.rs  general.rs  mod.rs
conda-recipe/: meta.yaml
constitutive/: __init__.py  explicit_dynamics.py  helper.py  mechanics_problem.py
constitutiveX/: __init__.py  explicit_dynamics.py  helpers.py  mechanics_problem.py
docs/: cofe.rst  conf.py  index.md  index.rst
docs/API/: Interfaces.md  maps.md  models.md  postprocessing.md  solver.md  stress_strain.md
docs/custom_models/: cpp_elasticity.md  rust_elasticity.md  umat_elasticity.md
docs/getting_started/: basic_usage.ipynb  installation.md
examples/: .gitignore  basics.html  basics.py  example.html  example.ipynb  example_plastic.py  example_plasticity.py  fenics_plastic_constitutive.py  fenics_plastic_problem.py  fenics_plasticity.py  gdm_analytic.py  gdm_constitutive.py  gradient_damage.html  gradient_damage.py  gradient_damage_iterative.html  gradient_damage_iterative.py  gradient_damagex.html  gradient_damagex.py  helper.html  helper.py  helper_plastic_problem.py  helper_plasticity.py  mises-plasticity-with-isotropic-hardening.py  notation.ipynb  plate_with_hole.html  plate_with_hole.py  ramberg_osgood.html  ramberg_osgood.py
examples/JH2/: Druckkurve_Beispiel.txt  jh2_small_plate.py
examples/blast_load/: plastic_response.py
examples/elasticity_cpp/: CMakeLists.txt
examples/elasticity_cpp/src/: main.cpp
examples/elasticity_rs/: Cargo.toml
examples/elasticity_rs/src/: lib.rs
examples/linear_elasticity/: linear_elasticity_model.py  test_cantilever.py  test_elasticity.py
examples/mises_plasticity/: Mises_plasticity_without_hardening.py  Simple_Tension_Test.py  linear_elasticity_model.py  mises_plasticity_isotropic_hardening.py  test_objective_stress_rate.py  test_plasticity.py
examples/mises_plasticity_rust/: Cargo.toml
examples/polycrystal/: Incorporate.rst
examples/umat/: CMakeLists.txt
examples/visco_elasticity/: spring_kelvin_model.py  spring_kelvin_model01.py  spring_maxwell_model.py  spring_maxwell_model01.py  test_viscoelasticity.py
module/: bend3point_convergence_Abbas.py  issues.md  truss_convergence.py  truss_convergence_Abbas.py
rust/: Cargo.toml
rust/src/: lib.rs
src/: CMakeLists.txt  README.html  README.rst  UmatMaterial.h  constitutive.cpp  constitutiveX.cpp  definitions.h  hypoelasticity.h  ideas.md  ideas.py  interfaces.h  jh.h  jh2.h  jhconcrete.h  laws.h  linear_elastic.h  local_damage.h  main.cpp  mises_eos.h  plasticity.h  radial_plasticity.h  rht.h  strain.h  stress_rates.h  stress_strain.h  template_test.cpp  umat.h  umat_linear_elastic.f
src/fenics_constitutive/: __init__.py  _version.py  boundarycondition.py  conversion.py  error_estimation.py  interfaces.py  maps.py  solver.py  stress_strain.py
src/fenics_constitutive/constitutive/: __init__.py
src/fenics_constitutive/constitutive/models/: mises_plasticity_isotropic_hardening.py
src/fenics_constitutive/models/: __init__.py  elasticity_laws.py  identity_submatrix.py  interfaces.py  linear_elasticity_model.py  materialtensor.py  mises_plasticity_isotropic_hardening.py  mohr_coulomb_analytical_implementation.py  mohr_coulomb_smoothed.py  rust_models.py  spring_kelvin_model.py  spring_maxwell_model.py  stress_strain.py  test_mohr_coulomb_smoothening.py  utils.py
src/fenics_constitutive/postprocessing/: __init__.py  error_estimation.py
src/fenics_constitutive/solver/: __init__.py  _history.py  _incrementalunknowns.py  _lawcontext.py  _lawonsubmesh.py  _problemdescription.py  _solver.py  _spaces.py  maps.py  typesafe.py  utils.py
test/: CaseA.csv  CaseB.csv  CaseC.csv  CaseC2.csv  benchmark_elasticity.py  dolfinx_test_jh2_2d.py  hello_cpp.py  hypo.py  hypoelastic_pull.py  hypoelastic_shear.py  mesh.h5  mesh.xdmf  plasticity_law_pure_python.py  plate.h5  plate.xdmf  strain.cpp  test_elastic_uniaxial.py  test_gradient_damage.py  test_hypoelastic_shear.py  test_interfaces.py  test_jaumann_rate.py  test_jh2.py  test_jh2_2d.py  test_linear_elasticity.py  test_local_damage.py  test_modified_mises.py  test_plasticity.py  test_plate_with_hole.py  test_radial_plasticity.py  test_umat_2D_linear_elastic.py
test/umat/: 64_orientations.inp  LoadDisplacementAbaqusFile.txt  SDCHABOX.mat  SDCRCRY.mat  linear_elastic.f  mesh2D.h5  mesh2D.xdmf  test_umat_2D.py  test_umat_2D_linear_elastic.py  test_umat_3D.py  test_umat_small_grains_3D.py
tests/: test.py  test_conversions.py  test_extension.py  test_maps.py  test_objective_stress_rate.py  test_package.py  test_solver_mpi.py
tests/constitutive/: test_conversions.py
tests/models/: test_conversions.py  (+3 more)
(+35 files in other folders)
