[package]
#name = "fenics-constitutive"
name = "bindings"
version = "0.1.0"
edition = "2024"

[lib]
name = "bindings"
crate-type = ["cdylib"]

[dependencies]
comfe-rs = { path = "../comfe-rs" , features = ["python-bindings"]}
pyo3 = {version = "*", features = ["extension-module", "abi3-py38"]}
numpy = "*"
